--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,5 @@ allprojects {
 
 dependencies {
     compile 'org.mongodb:mongo-java-driver:3.6.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
