--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'org.mongodb:mongo-java-driver:3.6.1'
+    compile 'com.android.volley:volley:1.1.0'
+    compile 'com.google.code.gson:gson:2.8.2'
 }
